import type { CopilotSession, SessionEvent as SdkSessionEvent } from "@github/copilot-sdk";
import { afterAll, beforeEach, describe, expect, mock, test } from "bun:test";
import type { WorkspaceEvent } from "@workspace/model/events";
import type { SessionEvent, SessionMetadataUpdate } from "@sessions/model";
import { sessionSeedFromSnapshot, toSessionSnapshot, type Session } from "@sessions/model/reducer";
import { loadSessionFixture } from "./helpers";
import * as realSessionRegistry from "@sessions/server/state/registry";
import * as realBroadcast from "@workspace/server/events";
import * as realWorkspaceState from "@workspace/server/state";

// Golden replay of the full stream lifetime: real v1 CLI events from the
// fixture drive a SessionStream through two turns — explicit start, fixture
// replay, queueing a follow-up, the idle→drain handoff, and the final
// idle→finish teardown. The projector/reducer goldens lock the data pipeline;
// this locks the runtime around it: event sequencing, client ID correlation,
// buffering, global broadcast ordering, and teardown.
//
// Nondeterministic Date.now-seeded eventIds are normalized to stable ordinals
// before asserting.
//
// Module mocks cover each module's full surface and are restored after this
// suite so the golden harness cannot alter later integration tests.

const sideEffects: string[] = [];
const workspaceEventListeners = new Set<(event: WorkspaceEvent) => void>();
const realSessionRegistryExports = { ...realSessionRegistry };
const realBroadcastExports = { ...realBroadcast };
const realWorkspaceStateExports = { ...realWorkspaceState };
const unused = () => {
  throw new Error("not used in stream golden replay");
};
const settle = () => Bun.sleep(0);
const INITIAL_PROMPT = "kick off the reviews";

function emitMockWorkspaceEvent(event: WorkspaceEvent): void {
  for (const listener of workspaceEventListeners) {
    listener(event);
  }
}

function sdkEvent(event: unknown): SdkSessionEvent {
  return event as SdkSessionEvent;
}

mock.module("@sessions/server/state/registry", () => ({
  createSession: unused,
  getSession: unused,
  withSession: unused,
  evictCachedSession: () => {},
  evictCachedSessionIfStale: () => false,
  deleteSession: unused,
  deleteSessionIfExists: unused,
}));
mock.module("@workspace/server/events", () => ({
  emitSessionNameUpdate: (sessionId: string, name: string) => {
    sideEffects.push(`summary:${sessionId}:${name}`);
    emitMockWorkspaceEvent({
      type: "session.upserted",
      session: {
        sessionId,
        modifiedTime: new Date().toISOString(),
        summary: name,
      },
    });
  },
  broadcast: emitMockWorkspaceEvent,
  emitSessionUpsert: (session: SessionMetadataUpdate) =>
    emitMockWorkspaceEvent({ type: "session.upserted", session }),
  emitSessionDelete: (sessionId: string) =>
    emitMockWorkspaceEvent({ type: "session.deleted", sessionId }),
  subscribeWorkspaceEvents: (listener: (event: WorkspaceEvent) => void) => {
    workspaceEventListeners.add(listener);
    return () => {
      workspaceEventListeners.delete(listener);
    };
  },
}));
mock.module("@workspace/server/state", () => ({
  ...realWorkspaceStateExports,
  setSessionStatus: (sessionId: string, status: "running" | "idle" | "unread") => {
    sideEffects.push(`${status}:${sessionId}`);
    emitMockWorkspaceEvent({ type: `session.${status}`, sessionId });
  },
  clearDraftPrompt: () => {},
}));

afterAll(() => {
  mock.module("@sessions/server/state/registry", () => realSessionRegistryExports);
  mock.module("@workspace/server/events", () => realBroadcastExports);
  mock.module("@workspace/server/state", () => realWorkspaceStateExports);
});

beforeEach(() => {
  sideEffects.length = 0;
  workspaceEventListeners.clear();
});

const { SessionStream } = await import("@sessions/server/runtime");

const SESSION_ID = "golden-stream";

describe("stream golden replay", () => {
  test("two-turn lifetime: fixture replay, queue drain, and finish", async () => {
    // ── Normalization for nondeterministic ids ─────────────────────────
    let baseEventId: number | undefined;
    const normalize = (event: SessionEvent): unknown => {
      const e = { ...event } as Record<string, unknown>;
      if (typeof e.eventId === "number") {
        baseEventId ??= e.eventId;
        e.eventId = e.eventId - baseEventId;
      }
      return e;
    };

    const sdkCalls: unknown[] = [];
    let sdkHandler: ((event: SdkSessionEvent) => void) | undefined;
    const fakeSession = {
      on: (handler: (event: SdkSessionEvent) => void) => {
        sdkHandler = handler;
        return () => sideEffects.push("sdk:unsubscribed");
      },
      send: async (message: unknown) => {
        sdkCalls.push({ send: message });
      },
      setModel: async (model: string, options: unknown) => {
        sdkCalls.push({ setModel: [model, options] });
      },
    } as unknown as CopilotSession;

    const stream = SessionStream.getOrCreate(SESSION_ID, fakeSession, {
      model: { name: "gpt-5.5" },
    });
    const received: unknown[] = [];
    const events = stream.subscribe();
    const collector = (async () => {
      for await (const event of events) {
        received.push(normalize(event));
      }
      received.push("<<SUBSCRIPTION-DONE>>");
    })();

    // Turn 1: explicit start + full fixture replay through the SDK listener.
    await stream.deliver({ clientId: "client-1", role: "user", content: INITIAL_PROMPT });
    for (const event of await loadSessionFixture("subagents")) {
      sdkHandler!(event);
    }
    sdkHandler!(
      sdkEvent({ type: "assistant.message_delta", data: { deltaContent: "Wrapping up." } }),
    );

    // Queue a follow-up, then end turn 1 so the runtime sends turn 2.
    await stream.deliver({
      clientId: "queued-1",
      role: "user",
      content: "now fix the findings",
    });
    sdkHandler!(sdkEvent({ type: "session.idle", data: {} }));
    await settle();

    // Turn 2 streams, then idles with an empty queue → finish.
    sdkHandler!(
      sdkEvent({
        type: "user.message",
        data: { content: "now fix the findings", delivery: "idle" },
      }),
    );
    sdkHandler!(sdkEvent({ type: "assistant.turn_start", data: {} }));
    sdkHandler!(sdkEvent({ type: "assistant.message_delta", data: { deltaContent: "On it." } }));
    sideEffects.push("--- pre-finish ---");
    sdkHandler!(sdkEvent({ type: "session.idle", data: {} }));
    await settle();
    await collector;

    // ── Invariants ─────────────────────────────────────────────────────
    // Each turn sent exactly its prompt to the SDK: the explicit start,
    // then the drained queue prompt.
    expect(sdkCalls).toEqual([
      { send: { prompt: INITIAL_PROMPT, attachments: undefined } },
      { send: { prompt: "now fix the findings", attachments: undefined } },
    ]);
    // Teardown sequence: idle announcement, end-of-stream marker to subscribers,
    // SDK unsubscribe — in that order. The workspace read action is silent when
    // the session was not unread.
    expect(sideEffects.slice(sideEffects.indexOf("--- pre-finish ---") + 1)).toEqual([
      `idle:${SESSION_ID}`,
      "sdk:unsubscribed",
    ]);
    expect(received.at(-1)).toBe("<<SUBSCRIPTION-DONE>>");
    expect(SessionStream.isRunning(SESSION_ID)).toBe(false);

    // The SDK input is authoritative: delivery itself emits no provisional
    // transcript event, and the later SDK event receives the client's ID.
    const firstUserEvent = received.find(
      (event): event is Record<string, unknown> =>
        typeof event === "object" &&
        event !== null &&
        "type" in event &&
        event.type === "user_message",
    );
    expect(firstUserEvent).toMatchObject({ type: "user_message", clientId: "client-1" });
    expect(firstUserEvent?.content).not.toBe(INITIAL_PROMPT);

    // Live mode converges on the same conversation shape as history replay:
    // every subagent's work grouped under its agent call.
    const state = stream.getSessionState();
    const agents = state.messages.flatMap((m) =>
      m.role === "assistant" ? (m.toolCalls ?? []).filter((tc) => tc.name === "agent") : [],
    );
    expect(agents).toHaveLength(7);
    const childCounts = agents
      .map((tc) => tc.agent?.toolCalls?.length ?? 0)
      .filter((n) => n > 0)
      .sort((a, b) => a - b);
    expect(childCounts).toEqual([3, 4]);

    // ── Golden shape ───────────────────────────────────────────────────
    expect({ received, sideEffects }).toMatchSnapshot();
    expect({
      ...state,
      pendingToolCalls: [...state.pendingToolCalls.entries()],
      lastSeenEventId:
        state.lastSeenEventId !== undefined && baseEventId !== undefined
          ? state.lastSeenEventId - baseEventId
          : state.lastSeenEventId,
    }).toMatchSnapshot();
  });

  test("a snapshot-seeded stream converges with an uninterrupted stream across turns", async () => {
    // The same two turns travel two roads: one stream that lives through
    // both, and a stream that finishes cleanly after turn 1 (the snapshot capture
    // point) and is reborn seeded from its snapshot — the reply-to-idle-
    // session path. Both must reduce to identical session state.
    const fixture = await loadSessionFixture("subagents");

    type DrivenStream = {
      stream: ReturnType<typeof SessionStream.getOrCreate>;
      emit: (event: SdkSessionEvent) => void;
    };

    const driveStream = (sessionId: string, initialState?: Partial<Session>): DrivenStream => {
      let handler: ((event: SdkSessionEvent) => void) | undefined;
      const fakeSession = {
        on: (h: (event: SdkSessionEvent) => void) => {
          handler = h;
          return () => {};
        },
        send: async () => {},
        setModel: async () => {},
      } as unknown as CopilotSession;

      return {
        stream: SessionStream.getOrCreate(sessionId, fakeSession, initialState),
        emit: (event) => handler!(event),
      };
    };

    const runTurnOne = async ({ stream, emit }: DrivenStream) => {
      await stream.deliver({ clientId: "client-1", role: "user", content: INITIAL_PROMPT });
      for (const event of fixture) {
        emit(event);
      }
      emit(sdkEvent({ type: "assistant.message_delta", data: { deltaContent: "Wrapping up." } }));
    };

    const runTurnTwo = async ({ stream, emit }: DrivenStream) => {
      const disposition = await stream.deliver({
        clientId: "queued-1",
        role: "user",
        content: "now fix the findings",
      });
      if (disposition === "queued") {
        emit(sdkEvent({ type: "session.idle", data: {} }));
        await settle();
      }
      emit(
        sdkEvent({
          type: "user.message",
          data: { content: "now fix the findings", delivery: "idle" },
        }),
      );
      emit(sdkEvent({ type: "assistant.turn_start", data: {} }));
      emit(sdkEvent({ type: "assistant.message_delta", data: { deltaContent: "On it." } }));
      emit(sdkEvent({ type: "session.idle", data: {} }));
      await settle();
    };

    const comparable = (state: Session): unknown => ({
      ...state,
      pendingToolCalls: [...state.pendingToolCalls.entries()],
      lastSeenEventId: undefined,
    });

    // Road 1: both turns on one uninterrupted stream.
    const uninterrupted = driveStream("golden-uninterrupted");
    await runTurnOne(uninterrupted);
    await runTurnTwo(uninterrupted);

    // Road 2: turn 1 finishes cleanly, capturing the normalized final state.
    const interrupted = driveStream("golden-interrupted");
    await runTurnOne(interrupted);
    interrupted.emit(sdkEvent({ type: "session.idle", data: {} }));
    await settle();
    expect(SessionStream.isRunning("golden-interrupted")).toBe(false);

    const capturedSnapshot = toSessionSnapshot(
      "golden-interrupted",
      interrupted.stream.getSessionState(),
    );

    // A new stream for the same session, seeded from the snapshot exactly as
    // delivery acquisition does on a cache hit, runs turn 2.
    const seeded = driveStream("golden-interrupted", sessionSeedFromSnapshot(capturedSnapshot));
    await runTurnTwo(seeded);

    expect(comparable(seeded.stream.getSessionState())).toEqual(
      comparable(uninterrupted.stream.getSessionState()),
    );
  });
});
